--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="container">
   <div class="alert alert-success" role="alert">
   <h2 class="alert-heading">Welcome To My Website</h2>
-  <p>Welcome to everybody my Website. This My Personal Website. This website name is Abdul Motaleb Profolio. Thanks for visit my Website</p>
+  <p>Welcome to everybody my Website. This is My Personal Website. This website name is Abdul Motaleb Portfolio. Thanks for visit my Website.</p>
   <hr>
   <p class="mb-0">“সাফল্যের জন্য তোমাকে ৩টি মূল্য দিতে হবে: ভালোবাসা, কঠোর পরিশ্রম, আর স্বপ্নকে বাস্তব হতে দেখার জন্য ব্যর্থতার পরও কাজ করে যাওয়া।”</p><br>
   
@@ -123,7 +123,7 @@
         </ul>
 
        </p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
   <div class="card">
@@ -143,7 +143,7 @@
           
           
         </ul></p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
   <div id="Personal Data" class="card">
@@ -151,7 +151,7 @@
     <div class="card-body">
       <h5 class="card-title">About Me</h5>
       <p class="card-text">My namae is Abdul Motaleb. I am student. At present I study at Dhaka alia kamil madrasah. I like reading book holly Quran and listening to islamic music. My favoret sports cricket and batmintton. I want to be a honest man. </p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
 </div>
@@ -244,7 +244,7 @@
   <div class="card-body">
     <h5 class="card-title">Bangladesh</h5>
     <p class="card-text">Bangladesh is a country in Southern Asia and is located on the Bay of Bengal bordered by India on all sides except for a small border with Burma. Bangladesh has flat plains, and most of the country is situated on deltas of large rivers flowing from the Himalayas.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <p class="card-text"><small class="text-muted"></small></p>
   </div>
 </div>
 </div>
